redisigned landing page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,230 +1,237 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="css/base.css">
-        <link rel="stylesheet" type="text/css" href="css/landing.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/1b2bdedf91.js" crossorigin="anonymous"></script>
-        <title>AUTH-WIKI | Home</title>
-    </head>
-    <body>
-      <header>
-        <h2 class="company-logo">AUTH_WIKI</h2>
-        <nav class="desktop_nav">
-          <a href="">About</a>
-          <a href="">Products</a>
-          <a href="">Documentation</a>
-          <div class="search-bar">
-            <input type="text" placeholder="Search" />
-            <i class="fa-solid fa-magnifying-glass search-icon"></i>
-          </div>
-          <button>Login</button>
-          <button class="signup-btn">Sign Up</button>
-        </nav>
-        <div class="mob_search-bar">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="css/base.css" />
+    <link rel="stylesheet" type="text/css" href="css/landing.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/1b2bdedf91.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>AUTH-WIKI | Home</title>
+  </head>
+  <body>
+    <header>
+      <h2 class="company-logo">AUTH_WIKI</h2>
+      <nav class="desktop_nav">
+        <a href="">About</a>
+        <a href="">Products</a>
+        <a href="">Documentation</a>
+        <div class="search-bar">
           <input type="text" placeholder="Search" />
           <i class="fa-solid fa-magnifying-glass search-icon"></i>
         </div>
-        <div class="mobile_nav">
-          <nav class="nav_card hide">
-            <a href="">About</a>
-            <a href="">Products</a>
-            <a href="">Developers</a>
-            <button class="login-btn">Login</button>
-            <a href="">Sign Up</a>
-          </nav>
-          <i class="menu_btn fa-solid fa-bars"></i>
-        </div>
-      </header>
-      <main class="lpmiddle">
-        <div class="lpmiddle1">
-          <div class="lpmiddle1a">
-            <div class="lpmiddle1ai">
-              <h1 id="lpheading1">Authentication Code Library for Developers</h1>
-              <br />
-              <p id="lptext1">
-                Every developer has a tab to open here on AUTH_WIKI. Our library
-                is extremely flexible and modular.
-              </p>
-            </div>
-            <div class="lpmiddle1aii">
-              <img
+        <button>Login</button>
+        <button class="signup-btn">Sign Up</button>
+      </nav>
+      <div class="mob_search-bar">
+        <input type="text" placeholder="Search" />
+        <i class="fa-solid fa-magnifying-glass search-icon"></i>
+      </div>
+      <div class="mobile_nav">
+        <nav class="nav_card hide">
+          <a href="">About</a>
+          <a href="">Products</a>
+          <a href="">Developers</a>
+          <button class="login-btn">Login</button>
+          <a href="">Sign Up</a>
+        </nav>
+        <i class="menu_btn fa-solid fa-bars"></i>
+      </div>
+    </header>
+    <main class="lpmiddle">
+      <div class="lpmiddle1">
+        <div class="lpmiddle1a">
+          <div class="lpmiddle1ai">
+            <h1 id="lpheading">Authentication Code Library for Developers</h1>
+            <br />
+            <p id="lptext">
+              Every developer has a tab to open here on AUTH_WIKI. Our library
+              is extremely flexible and modular.
+            </p>
+          </div>
+          <div class="lpmiddle1aii">
+            <img
               src="./images/undraw_developer_activity_re_39tg 3.png"
               alt=""
-                id="lpimage1"
-              />
-            </div>
-          </div>
-          <div class="lpmiddle1b">
-            <div class="lpmiddle1bi">
-              <a href="#">
-                <img src="./images/Frame 291.png" alt="#" id="image2" />
-                <!--  <p>
-                              Create dynamic and interactive web content like applications and
-                              browsers with Javascript.
-                          </p>
-                          <br />
-                          <p>Learn more...</p> -->
-              </a>
-            </div>
-            <div class="lpmiddle1bii">
-              <a href="#">
-                <img src="./images/Frame 133.png" alt="#" id="image3" />
-                <!-- <p>
-                              Build websites, software, automate tasks, and conduct data
-                              analysis with Python.
-                          </p>
-                          <br />
-                          <p>Learn more...</p> -->
-              </a>
-            </div>
-          </div>
-          <div class="lpmiddle1c">
-            <button onclick="http" class="lpbutton1">View all Strategies</button>
-          </div>
-        </div>
-        <div class="lpmiddleb"></div>
-        <div class="lpmiddle2">
-          <div class="lpmiddle2a">
-            <h1 id="lpheading2">Contribute and Interact with Code Samples in our Community</h1>
-            <br />
-            <h3 id="lptext2">
-              Find and contribute answers to technical challenges you and others
-              face when you code.
-            </h3>
-            <br />
-            <button onclick="" class="lpbutton1">Join The Community</button>
-          </div>
-          <div class="lpmiddle2b">
-            <img src="./images/PRODUCT pythonf 2.png" alt="" id="lpimage3"/>
-            <img src="./images/PRODUCT pythonf 1.png" alt="" id="lpimage4"/>
-          </div>
-        </div>
-        <div class="lpmiddlec"></div>
-        <div class="lpmiddle3">
-          <div class="lpmiddle3a">
-            <h1 id="lpheading3">Authentication made easy with AUTH_WIKI.</h1>
-            <p id="lptext3">
-              Whether you are building your first login page or an expert in all
-              thing identity, our documentation will help you understand Auth_Wiki
-              and use it in your application.
-            </p>
-          </div>
-          <div class="lpmiddle3b">
-            <div class="lpmiddle3bi">
-              <img src="./images/Frame 232.png" alt="#" />
-            </div>
-            <div class="lpmiddle3bi">
-              <img src="./images/Frame 234.png" alt="#" />
-            </div>
-            <div class="lpmiddle3bi">
-              <img src="./images/Frame 249.png" alt="#" />
-            </div>
-            <div class="lpmiddle3bi">
-              <img src="./images/Frame 235.png" alt="#" />
-            </div>
-          </div>
-          <div class="lpmiddle3c">
-            <button class="lpbutton1" onclick="">View documentation</button>
-          </div>
-        </div>
-        <div class="lpmiddle4">
-          <div class="lpmiddle4a">
-            <div class="lpmiddle4ai">
-              <div>
-                <img src="./images/Frame 29.png" alt="" />
-              </div>
-              <div>
-                <h3 id="lpheading4">UNAUTHENTICATED</h3>
-              </div>
-            </div>
-            <div class="lpmiddle4aii">
-              <p id="lptext4">
-                A Public Space to View The Platform and Basic Information About
-                it.
-              </p>
-            </div>
-            <div class="lpmiddle4aiii"><button class="lpbutton2">Join Community</button></div>
-          </div>
-          <div class="lpmiddle4b">
-            <div class="lpmiddle4bi">
-              <div>
-                <img src="./images/Frame 29.png" alt="" />
-              </div>
-              <div>
-                <h3 id="lpheading4">AUTHENTICATED</h3>
-              </div>
-            </div>
-            <div class="lpmiddle4bii">
-              <p id="lptext4">
-                Have Full Access to The Platform Contribute However Way, View Code
-                Samples and be Able to Download Codes.
-              </p>
-            </div>
-            <div class="lpmiddle4biii"><button class="lpbutton2">Get Started</button></div>
-          </div>
-        </div>
-        <div class="lpmiddle5">
-          <div class="lpmiddle5a">
-            <h1 id="lpheading5">Team AUTH_WIKI</h1>
-            <p id="lptext5">
-              Our team is dedicated to building great software to solve the
-              problems our customers face everyday.
-            </p>
-            <button class="lpbutton1">Meet The Team</button>
-          </div>
-          <div class="lpmiddle5b">
-            <img
-              src="./images/undraw_team_collaboration_re_ow29 2.png"
-              alt="#"
-              id="lpimage5"
+              id="lpimage1"
             />
           </div>
         </div>
-        <div class="lpmiddle6">
-          <h1 id="lpheading6">I4GxZURI TEAM</h1>
+        <div class="lpmiddle1b">
+          <div class="lpmiddle1bi">
+            <a href="#">
+              <img src="./images/Frame 291.png" alt="#" id="lpimage2" />
+            </a>
+          </div>
+          <div class="lpmiddle1bii">
+            <a href="#">
+              <img src="./images/Frame 133.png" alt="#" id="lpimage3" />
+            </a>
+          </div>
         </div>
-      </main>
-      <footer>
-        <h2 class="company-logo">AUTH_WIKI</h2>
-        <nav class="footer_nav">
-          <section>
-            <h4>Company</h4>
-            <a href="/">About</a>
-            <a href="/">FAQs</a>
-            <a href="/">Teams</a>
-            <a href="/">Community</a>
-          </section>
-          <section>
-            <h4>Products</h4>
-            <a href="/">Supported Libraries</a>
-            <a href="/">Articles</a>
-            <a href="/">Platforms</a>
-          </section>
-          <section>
-            <h4>Documentation</h4>
-            <a href="/">Tutorials</a>
-            <a href="/">Guidelines</a>
-            <a href="/">Reference</a>
-            <a href="/">Conception</a>
-          </section>
-          <section>
-            <h4>Contact Us</h4>
-            <a href="/">Get in Touch</a>
-            <a href="/">Report Issue</a>
-            <a href="/">Connect</a>
-            <a href="/">Help</a>
-          </section>
-        </nav>
-        <div class="socials">
-          <h5 class="lptag">I4GxZURI TEAM 7</h5>
+        <div class="lpmiddle1c">
+          <button onclick="http" class="lpbutton1">View all Strategies</button>
         </div>
-      </footer>
-      <script src="../js/script.js"></script>
-    </body>
+      </div>
+      <div class="lpmiddleb"></div>
+      <div class="lpmiddle2">
+        <div class="lpmiddle2a">
+          <h1 id="lpheading">
+            Contribute and Interact with Code Samples in our Community
+          </h1>
+          <br />
+          <h3 id="lptext">
+            Find and contribute answers to technical challenges you and others
+            face when you code.
+          </h3>
+          <br />
+          <button onclick="" class="lpbutton1">Join The Community</button>
+        </div>
+        <div class="lpmiddle2b">
+          <img src="./images/PRODUCT pythonf 2.png" alt="" id="lpimage3" />
+          <img src="./images/PRODUCT pythonf 1.png" alt="" id="lpimage4" />
+        </div>
+      </div>
+      <div class="lpmiddlec"></div>
+      <div class="lpmiddle3">
+        <div class="lpmiddle3a">
+          <h1 id="lpheading2">
+            Authentication made easy with
+            <br />
+            AUTH_WIKI.
+          </h1>
+
+          <p id="lptext3">
+            Whether you are building your first login page or an expert in all
+            thing identity, our
+            <br />
+            documentation will help you understand Auth_Wiki and use it in your
+            application.
+          </p>
+        </div>
+        <div class="lpmiddle3b">
+          <div class="lpmiddle3bi">
+            <img src="./images/Frame 232.png" alt="#" />
+          </div>
+          <div class="lpmiddle3bi">
+            <img src="./images/Frame 234.png" alt="#" />
+          </div>
+          <div class="lpmiddle3bi">
+            <img src="./images/Frame 249.png" alt="#" />
+          </div>
+          <div class="lpmiddle3bi">
+            <img src="./images/Frame 235.png" alt="#" />
+          </div>
+        </div>
+        <div class="lpmiddle3c">
+          <button class="lpbutton1" onclick="">View documentation</button>
+        </div>
+      </div>
+      <div class="lpmiddle4">
+        <div class="lpmiddle4a">
+          <div class="lpmiddle4ai">
+            <div>
+              <img src="./images/Frame 29.png" alt="" id="smallimage"/>
+            </div>
+            <div>
+              <h3 id="lpheading3">UNAUTHENTICATED</h3>
+            </div>
+          </div>
+          <div class="lpmiddle4aii">
+            <p id="lptext2">
+              A Public Space to View The Platform and Basic Information About
+              it.
+            </p>
+          </div>
+          <div class="lpmiddle4aiii">
+            <button class="lpbutton2">Join Community</button>
+          </div>
+        </div>
+        <div class="lpmiddle4b">
+          <div class="lpmiddle4bi">
+            <div>
+              <img src="./images/Frame 29.png" alt="" id="smallimage" />
+            </div>
+            <div>
+              <h3 id="lpheading3">AUTHENTICATED</h3>
+            </div>
+          </div>
+          <div class="lpmiddle4bii">
+            <p id="lptext2">
+              Have Full Access to The Platform Contribute However Way, View Code
+              Samples and be Able to Download Codes.
+            </p>
+          </div>
+          <div class="lpmiddle4biii">
+            <button class="lpbutton2">Get Started</button>
+          </div>
+        </div>
+      </div>
+      <div class="lpmiddle5">
+        <div class="lpmiddle5a">
+          <h1 id="lpheading">Team AUTH_WIKI</h1>
+          <p id="lptext">
+            Our team is dedicated to building great software to solve the
+            problems our customers face everyday.
+          </p>
+          <button class="lpbutton1a">Meet The Team</button>
+        </div>
+        <div class="lpmiddle5b">
+          <img
+            src="./images/undraw_team_collaboration_re_ow29 2.png"
+            alt="#"
+            id="lpimage5"
+          />
+        </div>
+      </div>
+      <div class="lpmiddle6">
+        <h1 id="lpheading4">I4GxZURI TEAM</h1>
+      </div>
+    </main>
+    <footer>
+      <h2 class="company-logo">AUTH_WIKI</h2>
+      <nav class="footer_nav">
+        <section>
+          <h4>Company</h4>
+          <a href="/">About</a>
+          <a href="/">FAQs</a>
+          <a href="/">Teams</a>
+          <a href="/">Community</a>
+        </section>
+        <section>
+          <h4>Products</h4>
+          <a href="/">Supported Libraries</a>
+          <a href="/">Articles</a>
+          <a href="/">Platforms</a>
+        </section>
+        <section>
+          <h4>Documentation</h4>
+          <a href="/">Tutorials</a>
+          <a href="/">Guidelines</a>
+          <a href="/">Reference</a>
+          <a href="/">Conception</a>
+        </section>
+        <section>
+          <h4>Contact Us</h4>
+          <a href="/">Get in Touch</a>
+          <a href="/">Report Issue</a>
+          <a href="/">Connect</a>
+          <a href="/">Help</a>
+        </section>
+      </nav>
+      <div class="socials">
+        <h5 class="lptag">I4GxZURI TEAM 7</h5>
+      </div>
+    </footer>
+    <script src="./js/script.js"></script>
+  </body>
 </html>
