products page folder restructuring

--- a/frontend/product-page/product-page.html
+++ b/frontend/product-page/product-page.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/base.css">
-    <link rel="stylesheet" type="text/css" href="../css/product-page.css">
+    <link rel="stylesheet" type="text/css" href="./product-page.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -49,7 +49,7 @@
             <section class="page_section">
                 <h3>Supported Languages</h3>
                 <div>  
-                    <img src="../Images/python.svg" alt="Python programming language">                  
+                    <img src="./images/python.svg" alt="Python programming language">                  
                     <p>
                         Lorem ipsum dolor sit amet consectetur
                         adipisicing elit. Nihil maxime distinctio
@@ -58,7 +58,7 @@
                     <a href="#">Learn more...</a>
                 </div>  
                 <div>  
-                    <img src="../Images/js.svg" alt="JavaScript programming language">                  
+                    <img src="./images/js.svg" alt="JavaScript programming language">                  
                     <p>
                         Lorem ipsum dolor sit amet consectetur
                         adipisicing elit. Nihil maxime distinctio
@@ -93,7 +93,7 @@
             <section class="page_section">
                 <h3>Platforms</h3>
                 <div>  
-                    <img src="../Images/python.svg" alt="Python programming language">                  
+                    <img src="./images/python.svg" alt="Python programming language">                  
                     <p>
                         Join this platform to interact with various Python users,
                         comment and review authentication libraries.                        
@@ -101,7 +101,7 @@
                     <a href="#">Learn more...</a>
                 </div>  
                 <div>  
-                    <img src="../Images/js.svg" alt="JavaScript programming language">                  
+                    <img src="./images/js.svg" alt="JavaScript programming language">                  
                     <p>
                         Join this platform to interact with various JavaScript users,
                         comment and review authentication libraries.  
@@ -109,7 +109,8 @@
                     <a href="#">Learn more...</a>
                 </div>        
                 <a class="more-link" href="#">More...</a>         
-            </section>
+                <img class="products--img" src="./images/undraw_product_iteration_kjok 3.svg" alt="Products loop">
+            </section>            
             <h2>I4G X ZURI TEAM</h2>
         </article>
     </main>
