naming convention changes

--- a/frontend/product-page/product-page.html
+++ b/frontend/product-page/product-page.html
@@ -66,7 +66,7 @@
                     </p>
                     <a href="#">Learn more...</a>
                 </div>                
-                <a class="more-link" href="#">More...</a>  
+                <a class="page_more-link" href="#">More...</a>  
             </section>
             <section class="page_section article_section">
                 <h3>Articles</h3>
@@ -88,7 +88,7 @@
                     </p>
                     <a href="#">Learn more...</a>
                 </div> 
-                <a class="more-link" href="#">More...</a>             
+                <a class="page_more-link" href="#">More...</a>             
             </section>
             <section class="page_section">
                 <h3>Platforms</h3>
@@ -108,8 +108,8 @@
                     </p>
                     <a href="#">Learn more...</a>
                 </div>        
-                <a class="more-link" href="#">More...</a>         
-                <img class="products--img" src="./images/undraw_product_iteration_kjok 3.svg" alt="Products loop">
+                <a class="page_more-link" href="#">More...</a>         
+                <img class="page_products--img" src="./images/undraw_product_iteration_kjok 3.svg" alt="Products loop">
             </section>            
             <h2>I4G X ZURI TEAM</h2>
         </article>
