--- a/frontend/product-page/product-page.html
+++ b/frontend/product-page/product-page.html
@@ -16,7 +16,7 @@
 
 <body class="page_body">
     <header>
-        <h2 class="company-logo"><a href="./index.html">AUTH_WIKI</a></h2>
+        <h2 class="company-logo"><a href="#">AUTH_WIKI</a></h2>
         <nav class="desktop_nav">
             <a href="">About</a>
             <a href="">Products</a>
