little test change

--- a/frontend/product-page/product-page.html
+++ b/frontend/product-page/product-page.html
@@ -61,7 +61,7 @@
                     <img src="./images/js.svg" alt="JavaScript programming language">                  
                     <p>
                         Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Nihil maxime distinctio
+                        adipisicing elit. Nihil maxime distinctio also
                         at aliquam! Molestias reiciendis necessitatibus
                     </p>
                     <a href="#">Learn more...</a>
