--- a/frontend/product-page/product-page.html
+++ b/frontend/product-page/product-page.html
@@ -52,7 +52,7 @@
                     <img src="./images/python.svg" alt="Python programming language">                  
                     <p>
                         Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Nihil maxime distinctio
+                        adipisicing elit. Nihil maxime distinction
                         at aliquam! Molestias reiciendis necessitatibus
                     </p>
                     <a href="#">Learn more...</a>
