--- a/frontend/login/login.html
+++ b/frontend/login/login.html
@@ -22,7 +22,7 @@
                 <label for="password"></label>
                 <input type="password" name="password" id="password" placeholder="Create password" class="lp-input"> <br> <br>
                 <label for="password"></label>
-                <input type="password" name="password" id="password" placeholder="Re-enter password" class="lp-input"> <br> <br>
+                <input type="password" name="password" id="password" placeholder="Re-enter password" class="lp-input"> <br> 
             </form>
             <div class="lp-continue">
                 <button class="button-secondary2">Login</button>           
