remove leading text from login box

--- a/frontend/login/login.html
+++ b/frontend/login/login.html
@@ -19,7 +19,7 @@
     <main class="lp-main">
         <img src="./images/login.png" width="45%" alt="login illustatrion" class="lp-login-illustration">
         <div class="lp-body">
-            <h2 class="lp-leading-text color-secondary2">Login to continue</h2>
+            <h2 class="lp-leading-text color-secondary2"></h2>
             <form action="#" method="post" enctype="multipart/form-data">
                 <div class="lp-field">
                     <label for="email"></label>
