--- a/frontend/login/login.html
+++ b/frontend/login/login.html
@@ -42,7 +42,7 @@
                 </div>
             </form>
             <div class="lp-continue">
-                <button class="button-secondary2">Login</button>           
+                <button class="button-secondary2" type="submit">Login</button>           
             </div>
             <div class="lp-body-footer">
             <div class="lp-main-footer">
