landing page update

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,8 +54,11 @@
             <h1 id="lpheading">Authentication Code Library for Developers</h1>
             <br />
             <p id="lptext">
-              Every developer has a tab to open here on AUTH_WIKI. Our library
-              is extremely flexible and modular.
+              Every developer has a tab to open here on
+              <br />
+              AUTH_WIKI. Our library is extremely flexible
+              <br />
+              and modular.
             </p>
           </div>
           <div class="lpmiddle1aii">
@@ -68,18 +71,24 @@
         </div>
         <div class="lpmiddle1b">
           <div class="lpmiddle1bi">
-            <a href="#">
-              <img src="./images/Frame 291.png" alt="#" id="lpimage2" />
-            </a>
+            <img src="./images/js.png" alt="" id="lpimage2" />
+            <p id="lptext1b">
+              Create dynamic and interactive web content like applications and
+              browsers with Javascript.
+            </p>
+            <a href="#" class="lplink1">...Learn more</a>
           </div>
           <div class="lpmiddle1bii">
-            <a href="#">
-              <img src="./images/Frame 133.png" alt="#" id="lpimage3" />
-            </a>
+            <img src="./Images/python.png" alt="" id="lpimage3" />
+            <p id="lptext1b">
+              Build websites, software, automate tasks, and conduct data
+              analysis with Python.
+            </p>
+            <a href="#" class="lplink1">...Leran more</a>
           </div>
         </div>
         <div class="lpmiddle1c">
-          <button onclick="http" class="lpbutton1">View all Strategies</button>
+          <a href="#" class="button button-primary">View all strategies</a>
         </div>
       </div>
       <div class="lpmiddleb"></div>
@@ -94,11 +103,11 @@
             face when you code.
           </h3>
           <br />
-          <button onclick="" class="lpbutton1">Join The Community</button>
+          <a href="#" class="button button-primary">Join the community</a>
         </div>
         <div class="lpmiddle2b">
-          <img src="./images/PRODUCT pythonf 2.png" alt="" id="lpimage3" />
-          <img src="./images/PRODUCT pythonf 1.png" alt="" id="lpimage4" />
+          <img src="./images/PRODUCT pythonf 2.png" alt="" id="lpimage4" />
+          <img src="./images/PRODUCT pythonf 1.png" alt="" id="lpimage5" />
         </div>
       </div>
       <div class="lpmiddlec"></div>
@@ -120,27 +129,31 @@
         </div>
         <div class="lpmiddle3b">
           <div class="lpmiddle3bi">
-            <img src="./images/Frame 232.png" alt="#" />
+            <img src="./images/Group Discussion.png" alt="#" />
+            <h2>Tutorials</h2>
           </div>
           <div class="lpmiddle3bi">
-            <img src="./images/Frame 234.png" alt="#" />
+            <img src="./images/guidelines.png" alt="#" />
+            <h2>Guidelines</h2>
           </div>
           <div class="lpmiddle3bi">
-            <img src="./images/Frame 249.png" alt="#" />
+            <img src="./images/siren.png" alt="#" />
+            <h2>Reference</h2>
           </div>
           <div class="lpmiddle3bi">
-            <img src="./images/Frame 235.png" alt="#" />
+            <img src="./images/idea.png" alt="#" />
+            <h2>Conception</h2>
           </div>
         </div>
         <div class="lpmiddle3c">
-          <button class="lpbutton1" onclick="">View documentation</button>
+          <a href="#" class="button button-primary">View documentation</a>
         </div>
       </div>
       <div class="lpmiddle4">
         <div class="lpmiddle4a">
           <div class="lpmiddle4ai">
             <div>
-              <img src="./images/Frame 29.png" alt="" id="smallimage"/>
+              <img src="./images/Frame 29.png" alt="" id="smallimage" />
             </div>
             <div>
               <h3 id="lpheading3">UNAUTHENTICATED</h3>
@@ -153,7 +166,8 @@
             </p>
           </div>
           <div class="lpmiddle4aiii">
-            <button class="lpbutton2">Join Community</button>
+            <a href="#" class="button button-primary">Join community</a>
+            <a href="#" class="lplink2">Or search its contents</a>
           </div>
         </div>
         <div class="lpmiddle4b">
@@ -172,7 +186,7 @@
             </p>
           </div>
           <div class="lpmiddle4biii">
-            <button class="lpbutton2">Get Started</button>
+            <a href="#" class="button button-primary">Get started</a>
           </div>
         </div>
       </div>
@@ -183,13 +197,13 @@
             Our team is dedicated to building great software to solve the
             problems our customers face everyday.
           </p>
-          <button class="lpbutton1a">Meet The Team</button>
+          <a href="#" class="button button-primary">meet the team</a>
         </div>
         <div class="lpmiddle5b">
           <img
             src="./images/undraw_team_collaboration_re_ow29 2.png"
             alt="#"
-            id="lpimage5"
+            id="lpimage6"
           />
         </div>
       </div>
