add type=submit to button

--- a/frontend/signup/signup.html
+++ b/frontend/signup/signup.html
@@ -58,7 +58,7 @@
                     </p>
                 </div>
                 <div class="sp-continue">
-                <button class="button-secondary2">Continue</button>           
+                <button class="button-secondary2" type="submit">Continue</button>           
             </div>
             </form>
             
