fix eye close for password2

--- a/frontend/signup/signup.html
+++ b/frontend/signup/signup.html
@@ -69,12 +69,12 @@
             </div>  
         </div>        
     </main>
+    <!-- This is the footer section of the signup page -->
     <footer class="sp-footer">
         <div class="sp-footer-float">
             <img src="./images/cp.png" alt="login cp" class="sp-cp">
             <p> I4GxZURI TEAM Team_7</p>
         </div>
-       
     </footer>
     <script src="./signup.js"></script>
 </body>
