fix footer for signup page

--- a/frontend/signup/signup.html
+++ b/frontend/signup/signup.html
@@ -73,7 +73,7 @@
     <footer class="sp-footer">
         <div class="sp-footer-float">
             <img src="./images/cp.png" alt="login cp" class="sp-cp">
-            <p> I4GxZURI TEAM Team_7</p>
+            <small class="sp-team-name"> I4GxZURI TEAM Team_7</small>
         </div>
     </footer>
     <script src="./signup.js"></script>
