--- a/frontend/login/login.html
+++ b/frontend/login/login.html
@@ -17,7 +17,7 @@
         <h1><a href="#">AUTH_WIKI</a></h1>
     </header>
     <main class="lp-main">
-        <img src="./images/login.png" width="45%" alt="login illustatrion" class="lp-login-illustration">
+        <img id="illustration" src="./images/login.png" width="45%" alt="login illustatrion" class="lp-login-illustration">
         <div class="lp-body">
             <h2 class="lp-leading-text color-secondary2"></h2>
             <form action="#" method="post" enctype="multipart/form-data">
@@ -42,7 +42,7 @@
                 </div>
             </form>
             <div class="lp-continue">
-                <button class="button-secondary2">Login</button>           
+                <button class="button-secondary2" type="submit">Login</button>           
             </div>
             <div class="lp-body-footer">
             <div class="lp-main-footer">
