--- a/frontend/documentation/documentation.html
+++ b/frontend/documentation/documentation.html
@@ -7,6 +7,7 @@
       <title>Documentation Page</title>
       <link rel="stylesheet" href="documentation.css">
       <script src="documentation.js"></script>
+      <script src="https://kit.fontawesome.com/3e26edd0f3.js" crossorigin="anonymous"></script>
 </head>
 <body>
      <main>
@@ -21,12 +22,89 @@
             </p>
       </div>
       <section class="dp-section-bottom">
-            <div class="dp-section-tutorial">
-                  <div>
-                        
+            <div class="dp-section-container" id="dp-section-container1">
+                  <div class="dp-container-image">
+                        <figure>
+                              <img src="../documentation/Images/tutorials.svg" alt="Tutorials image">
+                              <figcaption>Tutorials</figcaption>
+                        </figure>
+                  </div>
+                  <div class="dp-container-para">
+                        <p>
+                              Lessons that introduce the basics of Python, CSS and Java 
+                              in building a simple app. This is most useful when you are 
+                              new to AUTH_WIKI and getting started. <br><br><a href="#" class="dp-para-a">See more...</a> 
+                        </p>
+                  </div>
+                  <div class="dp-container-bullet">
+                        <p><i class="fa-solid fa-book"></i>Username and Password</p>
+                        <p><i class="fa-solid fa-book"></i>Sign up with Google</p>
+                        <p><i class="fa-solid fa-book"></i>Email magic link</p>
+                        <p><i class="fa-solid fa-book"></i>Auth0 integration</p>
+                  </div>
+            </div>
+            <div class="dp-section-container" id="dp-section-container2">
+                  <div class="dp-container-image">
+                        <figure>
+                              <img src="../documentation/Images/guidelines.svg" alt="Guidelines image">
+                              <figcaption>Guidelines</figcaption>
+                        </figure>
+                  </div>
+                  <div class="dp-container-para">
+                        <p>
+                              Step-by-step guides to help you accomplish a task.
+                              Most useful when you are trying to solve 
+                              a specific problem.
+                        </p>
+                  </div>
+                  <div class="dp-container-bullet">
+                        <p><i class="fa-solid fa-book"></i>Username and Password</p>
+                        <p><i class="fa-solid fa-book"></i>Email magic link</p>
+                  </div>
+            </div>
+            <div class="dp-section-container" id="dp-section-container3">
+                  <div class="dp-container-image">
+                        <figure>
+                              <img src="../documentation/Images/reference.svg" alt="Reference image">
+                              <figcaption>Reference</figcaption>
+                        </figure>
+                  </div>
+                  <div class="dp-container-para">
+                        <p>
+                              Technical descriptions of how Auth_Wiki works. 
+                              Most useful when you need detailed information 
+                              about Auth_Wiki's APIs. <br><br><a href="#" class="dp-para-a">See more...</a>
+                        </p>
+                  </div>
+                  <div class="dp-container-bullet">
+                        <p><i class="fa-solid fa-book"></i>Username and Password</p>
+                        <p><i class="fa-solid fa-book"></i>Email magic link</p>
+                  </div>
+            </div>
+            <div class="dp-section-container" id="dp-section-container4">
+                  <div class="dp-container-image">
+                        <figure>
+                              <img src="../documentation/Images/conception.svg" alt="Conception image">
+                              <figcaption>Conception</figcaption>
+                        </figure>
+                  </div>
+                  <div class="dp-container-para">
+                        <p>
+                              Explanation of higher level topics pertaining to 
+                              Auth_Wiki. Most useful for deepening your understanding.
+                        </p>
+                  </div>
+                  <div class="dp-container-bullet">
+                        <p><i class="fa-solid fa-book"></i>Username and Password</p>
+                        <p><i class="fa-solid fa-book"></i>Sign up with Google</p>
+                        <p><i class="fa-solid fa-book"></i>Email magic link</p>
+                        <p><i class="fa-solid fa-book"></i>Auth0 integration</p>  
                   </div>
             </div>
       </section>
+      <div class="dp-section-down">
+            <h3>14G X ZURI TEAM</h3>
+      </div>
      </main> 
 </body>
 </html>
