update terms dirname

--- a/frontend/terms/terms.html
+++ b/frontend/terms/terms.html
@@ -14,6 +14,10 @@
 </head>
 
 <body>
+    <header class="tp-header">
+        <h1><a href="#">AUTH_WIKI</a></h1>
+    </header>
+    <hr class="tp-hr">
     <main class="container">
         <div class="tp-container">
             <div class="tp-main-left">
@@ -38,10 +42,10 @@
                         <label class="tp-label" for="tp-input">I agree to the above terms of service and privacy policy.</label>
                     </div>
                 </div>
-                <button class="tp-btn">Continue</button>
+                <button class="tp-btn" type="submit">Continue</button>
             </div>
             <div class="tp-main-right">
-                <img class="tp-img" src="./images/terms_img.png" alt="">
+                <img class="tp-img" src="images/undraw_terms_re_6ak4 1 (1).png" alt="">
             </div>
         </div>
     </main>
