change button color

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -88,7 +88,7 @@
           </div>
         </div>
         <div class="lpmiddle1c">
-          <a href="#" class="button button-primary">View all strategies</a>
+          <a href="#" class="button button-secondary2">View all strategies</a>
         </div>
       </div>
       <div class="lpmiddleb"></div>
@@ -103,7 +103,7 @@
             face when you code.
           </h3>
           <br />
-          <a href="#" class="button button-primary">Join the community</a>
+          <a href="#" class="button button-secondary2">Join the community</a>
         </div>
         <div class="lpmiddle2b">
           <img src="./images/PRODUCT pythonf 2.png" alt="" id="lpimage4" />
@@ -146,7 +146,7 @@
           </div>
         </div>
         <div class="lpmiddle3c">
-          <a href="#" class="button button-primary">View documentation</a>
+          <a href="#" class="button button-secondary2">View documentation</a>
         </div>
       </div>
       <div class="lpmiddle4">
@@ -166,7 +166,7 @@
             </p>
           </div>
           <div class="lpmiddle4aiii">
-            <a href="#" class="button button-primary">Join community</a>
+            <a href="#" class="button button-secondary2">Join community</a>
             <a href="#" class="lplink2">Or search its contents</a>
           </div>
         </div>
@@ -186,7 +186,7 @@
             </p>
           </div>
           <div class="lpmiddle4biii">
-            <a href="#" class="button button-primary">Get started</a>
+            <a href="#" class="button button-secondary2">Get started</a>
           </div>
         </div>
       </div>
@@ -197,7 +197,7 @@
             Our team is dedicated to building great software to solve the
             problems our customers face everyday.
           </p>
-          <a href="#" class="button button-primary">meet the team</a>
+          <a href="#" class="button button-secondary2">meet the team</a>
         </div>
         <div class="lpmiddle5b">
           <img
