corrections on the about us page

--- a/frontend/about_us_page/about-us.html
+++ b/frontend/about_us_page/about-us.html
@@ -49,9 +49,9 @@
         <div class="au-auth-wiki">
             <h3>What are we?</h3> <br>
           Auth_wiki is an easily accessible website open to 
-          developers.<br />
+          developers. 
           We have a wide variety of codes that will help keep 
-          developers in track.
+          developers in<br> track.
         </div>
       </div>
       <div id="au-get-started">
