linking js script

--- a/frontend/product/product.html
+++ b/frontend/product/product.html
@@ -152,7 +152,7 @@
             <a href="/"><i class="fa-brands fa-instagram"></i></a>
         </div>
     </footer>
-    <script src="./js/script.js"></script>
+    <script src="./product.js"></script>
 </body>
 
 </html>
