--- a/frontend/product-page/product-page.html
+++ b/frontend/product-page/product-page.html
@@ -19,7 +19,7 @@
         <h2 class="company-logo"><a href="../index.html">AUTH_WIKI</a></h2>
         <nav class="desktop_nav">
             <a href="">About</a>
-            <a href="">Products</a>
+            <a href="./product-page.html">Products</a>
             <a href="">Documentation</a>
             <div class="search-bar">
                 <input type="text" placeholder="Search">
@@ -35,10 +35,10 @@
         <div class="mobile_nav">
             <nav class="nav_card hide">
                 <a href="">About</a>
-                <a href="">Products</a>
+                <a href="./product-page.html">Products</a>
                 <a href="">Documentation</a>
                 <button class="login-btn">Login</button>
-                <a href="">Sign Up</a>
+                <a href="../signup/signup.html">Sign Up</a>
             </nav>
             <i class="menu_btn fa-solid fa-bars"></i>
         </div>
@@ -152,7 +152,7 @@
             <a href="/"><i class="fa-brands fa-instagram"></i></a>
         </div>
     </footer>
-    <script src="./js/script.js"></script>
+    <script src="./product-page.js"></script>
 </body>
 
 </html>
