--- a/frontend/product/product.html
+++ b/frontend/product/product.html
@@ -19,7 +19,7 @@
         <h2 class="company-logo"><a href="../index.html">AUTH_WIKI</a></h2>
         <nav class="desktop_nav">
             <a href="">About</a>
-            <a href="">Products</a>
+            <a href="../product-page/product-page.html">Products</a>
             <a href="">Documentation</a>
             <div class="search-bar">
                 <input type="text" placeholder="Search">
