--- a/frontend/team/team.html
+++ b/frontend/team/team.html
@@ -43,7 +43,35 @@
             <i class="menu_btn fa-solid fa-bars"></i>
         </div>
     </header>
-    <main class="team_main">   
+    <main class="team_main">
+        <div class="team_banner">
+            <section>
+                <h1>MEET THE TEAM</h1>
+                <p>
+                    Our team is dedicated to building great software
+                    to solve the problems our customers face everyday.
+                </p>
+            </section>
+            <img src="./images/undraw_team_collaboration_re_ow29 3.svg" alt="Team working together">
+        </div>
+        <div class="team_members">
+            <div>
+                <img class="team_cofounder" src="./images/Frame 208.svg" alt="">
+                <img src="./images/Frame 204.svg" alt="">                 
+                <img src="./images/Frame 205.svg" alt="">
+                <img src="./images/Frame 200.svg" alt="">                                               
+            </div>
+            <div>
+                <img src="./images/Frame 201.svg" alt="">                
+                <img src="./images/Frame 203.svg" alt=""> 
+                <img src="./images/Frame 199.svg" alt="">                                              
+            </div>
+            <div>
+                <img src="./images/Frame 202.svg" alt="">
+                <img src="./images/Frame 206.svg" alt=""> 
+                <img src="./images/Frame 207.svg" alt="">                                
+            </div>
+        </div>
     </main>
     <footer>
         <h2 class="company-logo"><a href="../index.html">AUTH_WIKI</a></h2>
@@ -85,4 +113,5 @@
     </footer>
     <script src="./js/script.js"></script>
 </body>
+
 </html>
