--- a/frontend/documentation/documentation.html
+++ b/frontend/documentation/documentation.html
@@ -5,6 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Documentation Page</title>
+      <link rel="stylesheet" href="../css/base.css">
       <link rel="stylesheet" href="documentation.css">
       <script src="documentation.js"></script>
       <script src="https://kit.fontawesome.com/3e26edd0f3.js" crossorigin="anonymous"></script>
@@ -33,14 +34,15 @@
                         <p>
                               Lessons that introduce the basics of Python, CSS and Java 
                               in building a simple app. This is most useful when you are 
-                              new to AUTH_WIKI and getting started. <br><br><a href="#" class="dp-para-a">See more...</a> 
+                              new to AUTH_WIKI and getting started.                               
                         </p>
+                        <a href="#" class="dp-para-a">See more...</a>
                   </div>
                   <div class="dp-container-bullet">
-                        <p><i class="fa-solid fa-book"></i>Username and Password</p>
-                        <p><i class="fa-solid fa-book"></i>Sign up with Google</p>
-                        <p><i class="fa-solid fa-book"></i>Email magic link</p>
-                        <p><i class="fa-solid fa-book"></i>Auth0 integration</p>
+                        <p><i class="fa-solid fa-book"></i><span>Username and Password</span></p>
+                        <p><i class="fa-solid fa-book"></i><span>Sign up with Google</span></p>
+                        <p><i class="fa-solid fa-book"></i><span>Email magic link</span></p>
+                        <p><i class="fa-solid fa-book"></i><span>Auth0 integration</span></p>
                   </div>
             </div>
             <div class="dp-section-container" id="dp-section-container2">
@@ -73,8 +75,10 @@
                         <p>
                               Technical descriptions of how Auth_Wiki works. 
                               Most useful when you need detailed information 
-                              about Auth_Wiki's APIs. <br><br><a href="#" class="dp-para-a">See more...</a>
+                              about Auth_Wiki's APIs. 
+                              
                         </p>
+                        <a href="#" class="dp-para-a">See more...</a>
                   </div>
                   <div class="dp-container-bullet">
                         <p><i class="fa-solid fa-book"></i>Username and Password</p>
