--- a/frontend/404 page/404.html
+++ b/frontend/404 page/404.html
@@ -78,9 +78,10 @@ body {
       <i class="far fa-question-circle fa-spin"></i>
       <div class="err2">4</div>
       <div class="msg">
-          Maybe this page moved? <br>
-          Got deleted? <br>
-          Is hiding out in quarantine? Never existed in the first place?
+          Perhaps this page has moved?<br>
+          Have you been deleted?<br>
+          Is hiding in quarantine an option?
+          What if it never existed in the first place?<br>
           <p>Let's go <a href="../index.html">home</a> and try from there.</p></div>
         </div>
 
