--- a/backend/base.html
+++ b/backend/base.html
@@ -20,6 +20,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="{% static 'css/styles/devibeans.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/library_detail.css' %}">
+<link rel="stylesheet" type="text/css" href="./base.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
@@ -29,6 +30,36 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 </head>
 
 <body>
+  <header>
+    <h2 class="company-logo"><a href="../index.html">AUTH_WIKI</a></h2>
+    <nav class="desktop_nav">
+        <a href="">About</a>
+        <a href="./product-page.html">Products</a>
+
+        <a href="">Documentation</a>
+        <div class="search-bar">
+            <input type="text" placeholder="Search">
+            <i class="fa-solid fa-magnifying-glass search-icon"></i>
+        </div>
+        <a class="btn-link" href=""><button class="login-btn">Login</button></a>
+        <a class="btn-link" href="../signup/signup.html"><button class="signup-btn">Sign Up</button></a>
+    </nav>
+    <div class="mob_search-bar">
+        <input type="text" placeholder="Search">
+        <i class="fa-solid fa-magnifying-glass search-icon"></i>
+    </div>
+    <div class="mobile_nav">
+        <nav class="nav_card hide">
+            <a href="">About</a>
+            <a href="./product-page.html">Products</a>
+            <a href="">Documentation</a>
+            <a href=""><button class="login-btn">Login</button></a>
+            <a href="../signup/signup.html">Sign Up</a>
+
+        </nav>
+        <i class="menu_btn fa-solid fa-bars"></i>
+    </div>
+</header>
 <center>
     <h1 style="color: purple;">Auth Wiki</h1> 
 
@@ -49,8 +80,46 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 
     {% endblock %}
 
-    
-<footer></footer>
+<footer>
+  <h2 class="company-logo"><a href="../index.html">AUTH_WIKI</a></h2>
+        <nav class="footer_nav">
+            <section>
+                <h4>Company</h4>
+                <a href="/">About</a>
+                <a href="/">FAQs</a>
+                <a href="/">Teams</a>
+                <a href="/">Community</a>
+            </section>
+            <section>
+                <h4>Products</h4>
+                <a href="/">Supported Libraries</a>
+                <a href="/">Articles</a>
+                <a href="/">Platforms</a>
+            </section>
+            <section>
+                <h4>Documentation</h4>
+                <a href="/">Tutorials</a>
+                <a href="/">Guidelines</a>
+                <a href="/">Reference</a>
+                <a href="/">Conception</a>
+            </section>
+            <section>
+                <h4>Contact Us</h4>
+                <a href="/">Get in Touch</a>
+                <a href="/">Report Issue</a>
+                <a href="/">Connect</a>
+                <a href="/">Help</a>
+            </section>
+        </nav>
+        <div class="socials">
+            <a href="/"><i class="fa-brands fa-facebook-square"></i></a>
+            <a href="/"><i class="fa-brands fa-twitter"></i></a>
+            <a href="/"><i class="fa-brands fa-pinterest"></i></a>
+            <a href="/"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+</footer>
+</body>
+</html>
 <script>hljs.highlightAll();</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
  <script src="{% static 'js/highlight.pack.js' %}"></script>
