--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,7 +51,7 @@
       <div class="lpmiddle1">
         <div class="lpmiddle1a">
           <div class="lpmiddle1ai">
-            <h1 id="lpheading">Authentication Code Library for Developers</h1>
+            <h1 id="lpheading">Authentication Code Library <br> for Developers.</h1>
             <br />
             <p id="lptext">
               Every developer has a tab to open here on
@@ -76,7 +76,7 @@
               Create dynamic and interactive web content like applications and
               browsers with Javascript.
             </p>
-            <a href="#" class="lplink1">...Learn more</a>
+            <a href="#" class="lplink1">Learn more...</a>
           </div>
           <div class="lpmiddle1bii">
             <img src="./Images/python.png" alt="" id="lpimage3" />
@@ -84,17 +84,20 @@
               Build websites, software, automate tasks, and conduct data
               analysis with Python.
             </p>
-            <a href="#" class="lplink1">...Leran more</a>
+            <a href="#" class="lplink1">Learn more...</a>
           </div>
         </div>
         <div class="lpmiddle1c">
-          <a href="#" class="button button-secondary2">View all strategies</a>
+          <a href="#" class="button button-secondary2 lp-btn-strategy">View all Strategies</a>
         </div>
       </div>
       <div class="lpmiddleb"></div>
       <div class="lpmiddle2">
         <div class="lpmiddle2a">
-          <h1 id="lpheading">
+          <img src="../frontend/Images/pink circle.png" alt="" id="bpcircle">
+          <img src="../frontend/Images/blue dots.png" alt="" id="bdots">
+          <img src="../frontend/Images/small-pink-circle.png" alt="" id="spcircle">
+          <h1 id="lpheadingb">
             Contribute and Interact with Code Samples in our Community
           </h1>
           <br />
@@ -122,7 +125,7 @@
           <p id="lptext3">
             Whether you are building your first login page or an expert in all
             thing identity, our
-            <br />
+            <br/>
             documentation will help you understand Auth_Wiki and use it in your
             application.
           </p>
@@ -130,25 +133,26 @@
         <div class="lpmiddle3b">
           <div class="lpmiddle3bi">
             <img src="./images/Group Discussion.png" alt="#" />
-            <h2>Tutorials</h2>
+            <h3>Tutorials</h3>
           </div>
           <div class="lpmiddle3bi">
             <img src="./images/guidelines.png" alt="#" />
-            <h2>Guidelines</h2>
+            <h3>Guidelines</h3>
           </div>
           <div class="lpmiddle3bi">
             <img src="./images/siren.png" alt="#" />
-            <h2>Reference</h2>
+            <h3>Reference</h3>
           </div>
           <div class="lpmiddle3bi">
             <img src="./images/idea.png" alt="#" />
-            <h2>Conception</h2>
+            <h3>Conceptions</h3>
           </div>
         </div>
         <div class="lpmiddle3c">
-          <a href="#" class="button button-secondary2">View documentation</a>
+          <a href="#" class="button button-secondary2 lp-btn-documentation">View documentation</a>
         </div>
       </div>
+      <img src="../frontend/Images/pink circle.png" alt="" id="bpcircle2">
       <div class="lpmiddle4">
         <div class="lpmiddle4a">
           <div class="lpmiddle4ai">
@@ -186,7 +190,7 @@
             </p>
           </div>
           <div class="lpmiddle4biii">
-            <a href="#" class="button button-secondary2">Get started</a>
+            <a href="#" class="button button-secondary2 lp-btn-started">Get started</a>
           </div>
         </div>
       </div>
@@ -197,7 +201,7 @@
             Our team is dedicated to building great software to solve the
             problems our customers face everyday.
           </p>
-          <a href="#" class="button button-secondary2">meet the team</a>
+          <a href="#" class="button button-secondary2">Meet the Team</a>
         </div>
         <div class="lpmiddle5b">
           <img
