--- a/frontend/Password-reset/password-reset.html
+++ b/frontend/Password-reset/password-reset.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/base.css" />
-    <link rel="stylesheet" href="resetP.css" />
+    <link rel="stylesheet" href="password-reset.css" />
     <title>Reset Pass</title>
   </head>
   <body>
