--- a/frontend/base/base.html
+++ b/frontend/base/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" type="text/css" href="../css/base.css">
     <link rel="stylesheet" type="text/css" href="./base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,10 +29,6 @@
             <a class="btn-link" href=""><button class="login-btn">Login</button></a>
             <a class="btn-link" href="../signup/signup.html"><button class="signup-btn">Sign Up</button></a>
         </nav>
-        <div class="mob_search-bar">
-            <input type="text" placeholder="Search">
-            <i class="fa-solid fa-magnifying-glass search-icon"></i>
-        </div>
         <div class="mobile_nav">
             <nav class="nav_card hide">
                 <a href="">About</a>
