--- a/frontend/404-page/not-found.html
+++ b/frontend/404-page/not-found.html
@@ -16,13 +16,14 @@
 <main class="nf-main">
     <div id="nf">
         <div class="notfound-404">
-        <img src="https://res.cloudinary.com/pells/image/upload/v1659891322/zuri/amico_b9fsfr.png" id="image" alt="not-found" style="width:200px; height:200px;">
+            <img class="nf-img" src="./images/amico.png" id="image" alt="not-found">
         </div>
-        <div class="text">
-        <h1><strong>Oops,</strong> page not found</h1>
-<p>Go back to <a id="" href="" style="color: #00BBF9;text-decoration: none">Home Page!</a>
-</p>
-   </div>
+        <div class="nf-text">
+            <h1><strong>Oops,</strong> page not found</h1>
+            <p>Go back to <a href="/">Home Page!</a>
+            </p>
+        </div>
+    </div>
 </main>
 </body>
 </html>
